src/compiler/snapshots/isa__compiler__lexer__tests__chars-8.snap
---
source: src/compiler/lexer.rs
expression: "Lexer :: new(0, r\"'\\0'\").next()"
---
Some(
    Ok(
        Spand {
            data: Char(
                0,
            ),
            span: SpanData { file_id: 0, start: 0, end: 4 },
        },
    ),
)
