src/compiler/snapshots/isa__compiler__lexer__tests__chars-9.snap
---
source: src/compiler/lexer.rs
expression: "Lexer :: new(0, r\"'1'\").next()"
---
Some(
    Ok(
        Spand {
            data: Char(
                49,
            ),
            span: SpanData { file_id: 0, start: 0, end: 3 },
        },
    ),
)
