src/compiler/snapshots/isa__compiler__lexer__tests__chars.snap
---
source: src/compiler/lexer.rs
expression: "Lexer :: new(0, r\"'a'\").next()"
---
Some(
    Ok(
        Spand {
            data: Char(
                97,
            ),
            span: SpanData { file_id: 0, lo: 0, hi: 3 },
        },
    ),
)
