src/compiler/snapshots/isa__compiler__lexer__tests__delimiters-3.snap
---
source: src/compiler/lexer.rs
expression: "Lexer :: new(0, \"{\").next()"
---
Some(
    Ok(
        Spand {
            data: LBrace,
            span: SpanData { file_id: 0, start: 0, end: 1 },
        },
    ),
)
